<resources>
    <string name="app_name">Inventory</string>

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Product Name</string>

    <!-- Label for dropdown menu option if the product's reorder method is unknown [CHAR LIMIT=20] -->
    <string name="reorder_method_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the product reorder is by phone [CHAR LIMIT=20] -->
    <string name="reorder_method_phone">Phone</string>

    <!-- Label for dropdown menu option if the product is female [CHAR LIMIT=20] -->
    <string name="reorder_method_website">Website</string>

    <string name="product_saved">Product is saved</string>

    <string name="error_saving_product">Error with saving product</string>

    <!-- Title text for the empty view, which lets user know how to add an item [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s empty in the warehouse...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_all_dialog_msg">Delete all products?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete_all">Delete All</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <string name="unknown_method">Unknown Method</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="category_product_name">Product Name</string>
    <string name="category_product_image">Product Image</string>
    <string name="category_price">Price</string>
    <string name="category_preferred_reorder_method">Preferred Reorder Contact Method</string>
    <string name="category_supplier">Supplier</string>
    <string name="hint_product_supplier">Supplier</string>
    <string name="hint_product_price">Price</string>
    <string name="pick_image_intent_text">Choose an image for the product</string>
    <string name="invalid_sale">Sale not completed, can\'t have negative inventory!</string>
    <string name="sale_complete">Sale completed!</string>
    <string name="error_updating_sale">Error updating sale!</string>
    <string name="toast_missing_app">You have no app available to handle a phone call</string>
    <string name="toast_select_order_method">Need to select an order method</string>
    <string name="toast_enter_phone">Please enter a phone number before reordering</string>
    <string name="toast_missing_web_app">You have no app available to open a website</string>
    <string name="toast_enter_website">Please enter a website before reordering</string>
    <string name="toast_invalid_order_method">Your order method is invalid</string>
    <string name="toast_enter_price">Please enter a price before saving product</string>
    <string name="toast_enter_product_name">Please enter a product name before saving</string>
    <string name="toast_enter_supplier">Please enter a supplier before saving</string>
    <string name="toast_enter_quantity">Please enter a quantity before saving</string>
    <string name="text_increment_quantity">+</string>
    <string name="text_decrement_quantity">-</string>
    <string name="text_price_units_symbol">$</string>
    <string name="hint_reorder_phone">Reorder Phone Number</string>
    <string name="hint_reorder_website">Reorder Website</string>
    <string name="button_reorder_product">Reorder Product</string>
    <string name="button_sale">Sale</string>
    <string name="menu_sort_inventory">Sort Inventory</string>
    <string name="menu_sort_by_product_id_default">Sort by Product ID (Default)</string>
    <string name="menu_sort_products_by_name_a_z"><![CDATA[Sort Products by Name (A -> Z)]]></string>
    <string name="menu_sort_products_by_name_z_a"><![CDATA[Sort Products by Name (Z -> A)]]></string>
    <string name="menu_sort_products_by_price_low_to_high">Sort Products by Price ($ to $$$$)</string>
    <string name="menu_sort_products_by_price_high_to_low">Sort Products by Price ($$$$ to $)</string>
    <string name="menu_sort_products_by_quantity_low_to_high">Sort Products by Quantity (Low to High)</string>
    <string name="menu_sort_products_by_quantity_high_to_low">Sort Products by Quantity (High to Low)</string>
</resources>
