<?xml version="1.0" encoding="utf-8"?><!-- Options menu for the InventoryActivity -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InventoryActivity">

    <item
        android:id="@+id/action_insert_dummy_data"
        android:title="@string/action_insert_dummy_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/menu_sort_inventory"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/action_sort_default"
                android:title="@string/menu_sort_by_product_id_default"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_sort_a_to_z"
                android:title="@string/menu_sort_products_by_name_a_z"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_sort_z_to_a"
                android:title="@string/menu_sort_products_by_name_z_a"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_sort_price_low_to_high"
                android:title="@string/menu_sort_products_by_price_low_to_high"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_sort_price_high_to_low"
                android:title="@string/menu_sort_products_by_price_high_to_low"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_sort_quantity_low_to_high"
                android:title="@string/menu_sort_products_by_quantity_low_to_high"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_sort_quantity_high_to_low"
                android:title="@string/menu_sort_products_by_quantity_high_to_low"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/action_delete_all_entries"
        android:title="@string/action_delete_all_entries"
        app:showAsAction="never" />
</menu>