<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_margin">

        <!-- Image category -->
        <LinearLayout
            android:id="@+id/category_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_product_image" />

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Image -->
                <ImageView
                    android:id="@+id/edit_product_image"
                    android:layout_width="@dimen/product_image_size"
                    android:layout_height="@dimen/product_image_size"
                    android:src="@drawable/placeholder_image" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_add_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/fab_margin"
                    android:src="@drawable/ic_add_a_photo" />

            </RelativeLayout>
        </LinearLayout>


        <!-- Product category -->
        <LinearLayout
            android:id="@+id/category_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/category_image"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_product_name" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_product_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_name"
                    android:inputType="textCapWords" />

            </LinearLayout>
        </LinearLayout>

        <!-- Quantity category -->
        <LinearLayout
            android:id="@+id/category_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/category_product"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="Quantity" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:paddingLeft="4dp">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/list_item_margin"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:onClick="incrementQuantity"
                    android:text="+" />

                <!-- Quantity field -->
                <EditText
                    android:id="@+id/edit_product_quantity"
                    style="@style/EditorFieldStyle"
                    android:layout_width="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:hint="@string/hint_product_quantity"
                    android:inputType="number" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/list_item_margin"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:onClick="decrementQuantity"
                    android:text="-" />
            </LinearLayout>
        </LinearLayout>

        <!-- Price category -->
        <LinearLayout
            android:id="@+id/category_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/category_quantity"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_price" />

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Units for price ($) -->
                <TextView
                    android:id="@+id/label_weight_units"
                    style="@style/EditorUnitsStyle"
                    android:text="$" />

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/EditorFieldStyle"
                    android:layout_toRightOf="@+id/label_weight_units"
                    android:hint="@string/hint_product_price"
                    android:inputType="numberDecimal" />


            </RelativeLayout>
        </LinearLayout>

        <!-- Supplier category -->
        <LinearLayout
            android:id="@+id/category_supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/category_price"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_supplier" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_product_supplier"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_supplier"
                    android:inputType="textCapWords" />

            </LinearLayout>
        </LinearLayout>

        <!-- Preferred Contact Method category -->
        <LinearLayout
            android:id="@+id/category_contact_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/category_supplier"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_preferred_reorder_method" />

            <!-- Input field -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Method drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_method"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown" />

                <!-- Phone Number field -->
                <EditText
                    android:id="@+id/edit_product_reorder_phone"
                    style="@style/EditorFieldStyle"
                    android:layout_below="@+id/spinner_method"
                    android:hint="Reorder Phone Number"
                    android:inputType="phone"
                    android:visibility="invisible" />

                <!-- Website field -->
                <EditText
                    android:id="@+id/edit_product_reorder_website"
                    style="@style/EditorFieldStyle"
                    android:layout_below="@+id/spinner_method"
                    android:hint="Reorder Website"
                    android:inputType="textUri"
                    android:visibility="invisible" />
            </RelativeLayout>


        </LinearLayout>

        <Button
            android:id="@+id/button_reorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/category_contact_method"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/fab_margin"
            android:backgroundTint="@color/colorAccent"
            android:onClick="reorderProductClicked"
            android:text="Reorder Product" />
    </RelativeLayout>
</ScrollView>